# supplier_project

./: README.md  pyproject.toml
src/supplier/: config.py  crew.py  main.py
src/supplier/config/: agents.yaml  tasks.yaml
src/supplier/tools/: custom_tool.py
