[project]
name = "supplier"
version = "0.1.0"
description = "supplier using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[agentops,tools]>=0.100.0,<1.0.0",
    "scrapfly-sdk>=0.8.21",
]

[project.scripts]
supplier = "supplier.main:run"
run_crew = "supplier.main:run"
train = "supplier.main:train"
replay = "supplier.main:replay"
test = "supplier.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
